samples/_failures_safe/1761078293_ff7d61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_176fc35f.c: In function ‘main’:
./samples/SAFE/__tmp_176fc35f.c:169:12: error: missing terminating " character
  169 |     printf("Tokens:\n
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_176fc35f.c:169:5: error: expected expression at end of input
  169 |     printf("Tokens:\n
      |     ^~~~~~
./samples/SAFE/__tmp_176fc35f.c:169:5: error: expected declaration or statement at end of input
